@@ -27,7 +27,7 @@ $:.unshift(File.dirname(__FILE__)) unless
 unless defined?(ActiveSupport)
   begin
     $:.unshift(File.dirname(__FILE__) + "/../../activesupport/lib")  
-    require 'active_support'  
+    require 'active_support'
   rescue LoadError
     require 'rubygems'
     gem 'activesupport'
